--- a/public/main.css
+++ b/public/main.css
@@ -6,15 +6,14 @@
 
 body {
   background-color: #282727;
-  height: 100vh;
 }
 
-a{
+a {
   text-decoration: none;
   color: white;
 }
 
-li{
+li {
   list-style: none;
 }
 
@@ -49,10 +48,10 @@ li{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: sticky;  
+  position: sticky;
   background-color: #282727;
   top: 0;
-  height: 50px;
+  min-height: 50px;
   z-index: 9999;
 }
 
@@ -62,23 +61,23 @@ li{
   color: white;
 }
 
-.hamburger{
+.hamburger {
   flex-direction: column;
   cursor: pointer;
 }
 
-.hamburger span{
+.hamburger span {
   height: 2px;
   width: 20px;
   color: white;
   background-color: white;
 }
 
-.hamburger span:nth-of-type(1){
+.hamburger span:nth-of-type(1) {
   margin-bottom: 5px;
 }
 
-.hamburger span:nth-of-type(2){
+.hamburger span:nth-of-type(2) {
   margin-bottom: 5px;
 }
 
@@ -93,7 +92,7 @@ li{
   max-height: 40px;
   min-width: 500px;
   border-radius: 10px;
-  border: .5px solid grey;
+  border: 0.5px solid grey;
   box-shadow: 6px grey;
   font-size: 20px;
   background-color: #282727;
@@ -139,58 +138,60 @@ li{
 /* ================== Sidebar
 ===================== */
 
-.mainContent{
- margin-top: 10px;
- position: relative;
-}
+/* .mainContent {
+  margin-top: 30px;
+} */
 
-.sidebar{
+.sidebar {
   max-width: 180px;
   overflow-y: auto;
   position: fixed;
   overflow-x: hidden;
   max-height: calc(100vh - 50px);
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none; 
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;
 }
 
 .sidebar::-webkit-scrollbar {
   display: none;
 }
 
-.separation{
+.separation {
   margin: 20px 0px;
   height: 1px;
   width: 100%;
   background-color: white;
 }
 
-.sidebarItems_1 a:hover, .sidebarItems_2 a:hover{
+.sidebarItems_1 a:hover,
+.sidebarItems_2 a:hover {
   cursor: pointer;
-  background-color: cyan;
+  background-color: #6e6e6e;
 }
 
-.sidebarItems_1 a,.sidebarItems_2 a {
+.sidebarItems_1 a,
+.sidebarItems_2 a {
   display: block;
   border-radius: 5px;
   padding: 7px 15px;
 }
 
-.sidebarItems_1 p,.sidebarItems_2 p{
+.sidebarItems_1 p,
+.sidebarItems_2 p {
   margin-left: 20px;
   left: 0;
 }
 
-.fa-chevron-right{
+.fa-chevron-right {
   margin-left: 10px;
 }
 
-.subsProfile{
+.subsProfile {
   max-height: 20px;
   max-width: 20px;
 }
 
-.subsProfile img{
+.subsProfile img {
   height: 100%;
   width: 100%;
   object-fit: cover;
@@ -199,32 +200,78 @@ li{
 /* ================== Video Content
 ===================== */
 
-.videoContent{
+.tags {
+  height: 50px;
+  width: calc(100% - 190px);
+  left: 176px;
+  position: fixed;
+  z-index: 30;
+  background-color: #282727;
+}
+
+.tags p a{
+  padding: 5px 10px;
+  background-color: #474646;
+  border-radius: 10px;
+}
+
+.tags p{
+  margin: 18px 10px  0px 10px;
+}
+
+.videoContent {
   max-width: calc(100% - 180px);
   display: grid;
-  grid-template-columns: 370px 370px 370px;
-  gap: 20px;
+  grid-template-columns: 380px 380px 380px;
+  gap: 10px;
   position: relative;
   padding: 0px 0px 0px 30px;
-  -ms-overflow-style: none; 
+  -ms-overflow-style: none;
   height: calc(100% - 50px);
-  width: calc(100% - 180px);
   right: -10%;
+  margin-top: 60px;
 }
 
 .videoContent::-webkit-scrollbar {
   display: none;
 }
 
-
-.videoDetails{
+.videoDetails {
   max-height: 200px;
   max-width: 390px;
+  padding: 15px;
+  color: white;
+  margin-bottom: 80px;
 }
 
-.videoDetails video{
+.videoDetails video {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  border-radius: 10px;
 }
 
+.videoChannelDetails {
+  gap: 10px;
+  margin-top: 5px;
+}
+
+.channelProfile {
+  max-height: 30px;
+  max-width: 30px;
+}
+
+.channelProfile img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.tinyDetails p {
+  margin-top: 5px;
+}
+
+.views {
+  gap: 8px;
+}
